# Chat-Server

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  PROTOCOL.md  README.md  chat_server_docs.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
Schema/: README.md  events.sql  indexes.sql  messages.sql  rooms.sql  schema.sql  users.sql
docs/: architecture.md  backpressure.md  concurrency_models.md  demo_script.md  lifecycle.md  persistence.md  protocol.md
examples/: chatserver.json  chatserver.toml
src/chatserver/: __init__.py  config.py
src/chatserver/cache/: __init__.py  history_cache.py
src/chatserver/cli/: __init__.py  main.py
src/chatserver/engines/: __init__.py  asyncio_engine.py  base.py  selectors.py  threaded.py
src/chatserver/network/: __init__.py  admin.py  client.py  server.py  session.py  shutdown.py
src/chatserver/observability/: __init__.py  events.py  logging.py  stats.py
src/chatserver/persistence/: __init__.py  migrations.py  schema.sql  sqlite_store.py  writer.py
src/chatserver/protocol/: __init__.py  errors.py  framing.py  messages.py  validation.py
src/chatserver/queues/: __init__.py  backpressure.py  db_jobs.py  outbound.py
src/chatserver/routing/: __init__.py  rooms.py
tests/: conftest.py
tests/admin/: test_admin_socket.py
tests/cli/: test_cli_smoke.py
tests/concurrency/: test_cache_scheduler_concurrency.py  test_drop_newest.py  test_rate_limit_over_socket.py  test_slow_client_backpressure.py  test_slow_client_error_frame.py
tests/integration/: test_db_backpressure.py  test_history_cache_eviction.py  test_history_warmup_from_db.py  test_multi_client_chat.py  test_polish.py  test_polish_round2.py  test_protocol_edges.py  test_rename.py  test_rooms.py  test_round3_edges.py  test_round4_regressions.py
tests/lifecycle/: test_disconnect_cleanup.py  test_graceful_shutdown.py  test_handler_resilience.py  test_handshake.py  test_handshake_timeout.py  test_idle_timeout.py  test_no_thread_leak.py  test_scheduler_heartbeat.py  test_shutdown_disconnect_reason.py  test_shutdown_protocol_edges.py
tests/persistence/: test_db_writer_queue.py  test_history_pruning.py  test_round2_regressions.py
tests/teaching/: test_unsafe_examples_demonstrate_failure.py
tests/unit/: test_client_commands.py  test_config_from_file.py  test_config_validation.py  test_framing.py  test_framing_fuzz.py  test_history_cache.py  test_outbound_queue.py  test_protocol_validation.py  test_rate_limit.py
(+16 files in other folders)
