[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-server-library"
version = "0.1.0"
description = "Threaded raw TCP chat server library with CLI tools, SQLite persistence, backpressure, and tests."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prince", email = "newlifewithprince@live.com" }]
keywords = ["tcp", "sockets", "chat", "concurrency", "backpressure", "asyncio", "threading", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.0", "mypy>=1.8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/your-username/chat-server-library"
Repository = "https://github.com/your-username/chat-server-library"
Documentation = "https://github.com/your-username/chat-server-library/tree/main/docs"

[project.scripts]
chatserver = "chatserver.cli.main:server_main"
chatclient = "chatserver.cli.main:client_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chatserver = ["persistence/schema.sql", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "slow: socket/timing tests that use real I/O (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["chatserver"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/chatserver"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
# SIM108: an if/else with two distinct parsers reads clearer than a long ternary.
ignore = ["SIM108"]

[tool.ruff.lint.per-file-ignores]
# Test teardown keeps explicit try/except close(); E501 is noise in test fixtures.
"tests/*" = ["E501", "SIM105"]
